sandbox/output
Reorder.java:31: error: bad operand type int for unary operator '!'
            if (!result.indexOf(newList)>=0) {
                ^
1 error
